# PROI_Albaqir

./: .gitignore  README.md  my_map.pgm  start.launch.sh
analysis/: ekf_vs_odom.csv  kf_vs_odom.csv  particle_clouds.pkl  pf_vs_odom.csv  plot_ekf_vs_odom.py  plot_kf_vs_odom.py  plot_pf_vs_odom.py
config/: tb3_navigation2.rviz
docker/: run_proi.sh
src/example_package/: CMakeLists.txt  package.xml
src/example_package/launch/: start.launch  start.launch.py
src/example_package/src/: filter_node.cpp
src/filters/: CMakeLists.txt  package.xml
src/filters/include/filters/: EKF.hpp  KF.hpp  PF.hpp
src/filters/launch/: filters.launch.py  republish_odometry.py
src/filters/src/: EKF.cpp  EKF_node.cpp  KF.cpp  KF_node.cpp  PF.cpp  PF_node.cpp  ground_truth_checker.cpp
src/my_cool_project/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/my_cool_project/launch/: move_base.launch.py  myfile.launch.py  myfile2.launch.py  run.myfile.launch.py  start.launch.py
src/my_cool_project/maps/: my_map.pgm
src/my_cool_project/my_cool_project/: initial_pose_publisher.py  run_demo.py
src/my_cool_project/param/: nav2_params.yaml
