<?xml version="1.0"?>
<package format="3">
  <name>example_package</name>
  <version>0.0.1</version>
  <description>The example_package package (ROS 2 port)</description>

  <maintainer email="muster@technikum-wien.at">mluser</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime and build dependencies -->
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <!-- Optional: message generation (if needed) -->
  <!-- <build_depend>rosidl_default_generators</build_depend> -->
  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

