<?xml version="1.0"?>
<package format="3">
  <name>my_cool_project</name>
  <version>0.0.1</version>
  <description>The my_cool_project package for ROS 2</description>

  <maintainer email="woeber@todo.todo">woeber</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>
  <exec_depend>filters</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
